# fm26-artifact

./: .gitignore  Dockerfile  README.md  run_all_tests.sh
examples/binary-search/: Cargo.toml
examples/paper/: Cargo.toml  example1.key  example11.key  example2.key  example3.key  example4-overflow.key  example4.key  example5.proof  example6.proof  example7-and-8.proof  example9.key
examples/paper/src/: lib.rs
rustc-wrapper/wrapper/: .gitmodules
rustc-wrapper/wrapper/crates/cargo-key/: Cargo.toml
rustc-wrapper/wrapper/crates/example/: Cargo.toml
rustc-wrapper/wrapper/crates/example/src/: lib.rs
rustc-wrapper/wrapper/crates/key-wrapper/: Cargo.toml
rustc-wrapper/wrapper/crates/key-wrapper/src/: callbacks.rs  hir.rs
rustc-wrapper/wrapper/crates/key-wrapper/src/hir/: conversion.rs  expr.rs  item.rs  ty.rs  type_extract.rs  visit.rs
