[package]
name = "fm26-small-examples"
authors = ["Daniel Drodt <daniel.drodt@tu-darmstadt.de>"]
version = "0.1.0"
edition = "2024"

[dependencies]
rml-contracts = { path = "../../rustc-wrapper/wrapper/rml/crates/rml-contracts" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(rml)', 'cfg(doc_cfg)'] }
