[package]
name = "cargo-key"
authors = ["Daniel Drodt <daniel.drodt@tu-darmstadt.de>"]
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features = ["derive", "env"] }
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
key-wrapper = { path = "../key-wrapper" }
toml = "0.8.22"
env_logger = "0.11.8"

[package.metadata.rust-analyzer]
rustc_private = true
