[package]
name = "key-wrapper"
authors = ["Daniel Drodt <daniel.drodt@tu-darmstadt.de>"]
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["serde_derive"] }
clap = { version = "4.5.38", features = ["derive", "env"] }
serde_json = "1.0.140"
paste = "1.0.15"
rml = { path = "../../rml/crates/rml" }

[package.metadata.rust-analyzer]
rustc_private = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(rml)', 'cfg(doc_cfg)'] }
